<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin16"
    android:layout_width="match_parent"
    app:cardBackgroundColor="@color/bgGreen"
    app:cardCornerRadius="@dimen/cardCornerRadius"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding16dp">


        <ImageView
            android:id="@+id/profile_item_member"
            android:layout_width="@dimen/imageSize"
            android:layout_height="@dimen/imageSize"
            android:elevation="@dimen/elevation16dp"
            android:src="@drawable/ic_profile_item_member"
            app:layout_constraintStart_toStartOf="parent"
            
            
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/user_name_item_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/profile_item_member"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="@dimen/elevation16dp"
            android:text="@string/myName"
            android:textSize="@dimen/textSizeLarge"
            android:layout_marginStart="@dimen/margin16"/>
        
        <TextView
            android:id="@+id/address_item_member"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintStart_toEndOf="@+id/profile_item_member"
            android:layout_marginStart="@dimen/margin16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_name_item_member"/>
        <LinearLayout
            android:id="@+id/linear_layout_battery"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/profile_item_member"
            app:layout_constraintStart_toStartOf="parent"
            android:padding="@dimen/padding4dp"
            android:layout_marginTop="@dimen/margin16"
            android:background="@color/lightGreen"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_width="@dimen/image_icon_height_item_member"
                android:layout_height="@dimen/image_icon_height_item_member"
                android:src="@drawable/ic_battery_item_member"/>
            <TextView
                android:id="@+id/battery_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_text"
                android:layout_marginTop="@dimen/padding4dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/margin16"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_layout_telegram"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/profile_item_member"
            app:layout_constraintStart_toEndOf="@id/linear_layout_battery"
            android:padding="@dimen/padding4dp"
            android:layout_marginTop="@dimen/margin16"

            android:layout_height="wrap_content"

            >
            <ImageView
                android:layout_width="@dimen/image_icon_height_item_member"
                android:layout_height="@dimen/image_icon_height_item_member"
                android:src="@drawable/ic_telegram_item_member"

                />
            <TextView
                android:id="@+id/follower_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telegram_text"
                android:layout_marginTop="@dimen/padding4dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:layout_marginStart="@dimen/margin16"
                />

        </LinearLayout>
        <ImageView

            android:layout_margin="@dimen/padding4dp"
            android:layout_width="@dimen/image_icon_height_item_member"
            android:layout_height="@dimen/image_icon_height_item_member"
            app:layout_constraintBottom_toBottomOf="parent"
            android:elevation="@dimen/elevation16dp"
            app:layout_constraintStart_toEndOf="@id/linear_layout_telegram"
            android:src="@drawable/ic_wifi_item_member"
            />
       <ImageView
           android:layout_margin="@dimen/padding4dp"
           android:layout_width="@dimen/image_icon_height_item_member"
           android:layout_height="@dimen/image_icon_height_item_member"
           app:layout_constraintBottom_toBottomOf="parent"
           android:elevation="@dimen/elevation16dp"
           app:layout_constraintEnd_toEndOf="parent"
           android:src="@drawable/ic_call"
           />
          
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>